Remove PUT updates
